swift (1.11.0-2) unstable; urgency=high

  * CVE-2014-0006: Use constant time comparison in tempURL. Applied upstream
    patch (Closes: #735582).

 -- Thomas Goirand <zigo@debian.org>  Fri, 17 Jan 2014 00:31:56 +0800

swift (1.11.0-1) unstable; urgency=medium

  * New upstream relase.
  * Removed swift-bench things, since that's gone from upstream project (it's
    moved as a separate project at https://github.com/openstack/swift-bench).

 -- Thomas Goirand <zigo@debian.org>  Fri, 13 Dec 2013 17:21:20 +0800

swift (1.10.0-1) unstable; urgency=low

  * New upstream release.
  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Fri, 18 Oct 2013 01:08:31 +0800

swift (1.10.0~rc1-1) experimental; urgency=low

  * New upstream release.
  * Removed applied upstream patches.

 -- Thomas Goirand <zigo@debian.org>  Thu, 10 Oct 2013 11:59:08 +0800

swift (1.8.0-7) unstable; urgency=low

  * Added "Account Quota Correction" patch.

 -- Thomas Goirand <zigo@debian.org>  Thu, 26 Sep 2013 16:03:31 +0800

swift (1.8.0-6) unstable; urgency=low

  [ Thomas Goirand ]
  * Renamed all init script with .init extension in the debian folder, so it is
    more easy to list them with ls.
  * Added upstart scripts.
  * Added myself and Julien in debian/copyright for the packaging, plus
    Canonical for the upstart jobs.
  * Removes unwanted python-webob (build-)depends (Closes: #715452).
  * CVE-2013-4155: DoS using superfluous object tombstones. Upstream patch
    fixes handling of DELETE obj reqs with old timestamp (Closes: #719008).

  [ Julien Cristau ]
  * CVE-2013-2161: Check user input in XML responses (closes: #712202)

 -- Thomas Goirand <zigo@debian.org>  Fri, 28 Jun 2013 15:33:19 +0800

swift (1.8.0-5) unstable; urgency=low

  * swift-account should be Breaks+Replaces: swift (<< 1.8.0-4~) to allow to
    do backports.
  * Added Fix-formpost-with-queries-without-user_agent.patch.

 -- Thomas Goirand <zigo@debian.org>  Mon, 17 Jun 2013 15:14:15 +0800
