@@ -1,2 +1,1 @@
-doc/build/html
 AUTHORS
